Add checkKYB API and specs
